<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:orientation="vertical"
    android:background="@color/teal_200"
    tools:context=".MainActivity2">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="400dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="#00B8D4"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:id="@+id/masterLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:padding="12dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:id="@+id/dropdown_menu_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:id="@+id/layoutOne"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/convertFromTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1.0"
                        android:fontFamily="@font/chewy"
                        android:text="@string/from"
                        android:textColor="#0F051D"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/convertToTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:fontFamily="@font/chewy"
                        android:text="@string/to"
                        android:textColor="#0F051D"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/convert_from_dropdown_menu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1.0"
                        android:background="@android:drawable/editbox_background"
                        android:backgroundTint="#C51162"
                        android:fontFamily="@font/baloo"
                        android:hint="@string/currency"
                        android:text=""
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="12sp"
                        app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down_24"
                        app:drawableRightCompat="@drawable/ic_baseline_arrow_drop_down_24" />

                    <TextView
                        android:id="@+id/convert_to_dropdown_menu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:background="@android:drawable/editbox_background"
                        android:backgroundTint="#C51162"
                        android:fontFamily="@font/baloo"
                        android:hint="@string/currency"
                        android:text=""
                        android:textColor="#FFFFFF"
                        android:textColorHint="@color/white"
                        android:textSize="12sp"
                        app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down_24"
                        app:drawableRightCompat="@drawable/ic_baseline_arrow_drop_down_24" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:id="@+id/linearLayout01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/amountToConvertValueText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1.0"
                        android:fontFamily="@font/baloo"
                        android:text="@string/amount"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/conversionRateResultText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:fontFamily="@font/baloo"
                        android:gravity="center"
                        android:text="@string/conversion"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/amountToConvertValueEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1.0"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text=" "
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/conversionRateText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:paddingTop="20dp">

                <Button
                    android:id="@+id/conversionButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/baloo"
                    android:gravity="center"
                    android:paddingBottom="7dp"
                    android:text="Click to convert"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RelativeLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/first"
        android:layout_width="match_parent"

        android:layout_height="214dp"
        android:layout_alignBottom="@+id/card_view"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-15dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="-8dp"
        android:layout_marginBottom="-210dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/goBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/bg1"
                android:fontFamily="@font/baloo"
                android:text="go back"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/Help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/bg13"
                android:fontFamily="@font/baloo"
                android:text=" HELP"
                android:textColor="@color/white" />


        </LinearLayout>

    </LinearLayout>




</RelativeLayout>